--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,3 +52,10 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.input_label {
+  padding: 0 5px;
+  margin-left: -5px;
+  border-radius: 4px;
+  background-color: white;
+}
