--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -3,9 +3,16 @@ $responsive-desktop: 1000px;
 $responsive-tablet: 760px;
 $responsive-mobile: 480px;
 
-$admin-header-height: 30px;
-$admin-menu-width: 200px;
+$admin-header-height: 60px;
+$admin-menu-width: 220px;
 
-$padding-small: 10px;
-$padding-medium: 15px;
-$padding-large: 20px;
+$admin-view-header-height: 60px;
+
+$spacing-small: 10px;
+$spacing-medium: 15px;
+$spacing-large: 20px;
+
+
+$color-main: #FFFFFF;
+$color-background: #F5F5F5;
+$color-white: #F0F0F0;
