--- a/src/components/admin/Header/styles.module.scss
+++ b/src/components/admin/Header/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: $admin-header-height;
+  height: 100%;
 
-  border: 1px solid red;
+  border-bottom: 1px solid lightgray;
 }
