--- a/src/styles/pages/admin/view.module.scss
+++ b/src/styles/pages/admin/view.module.scss
@@ -1,7 +1,11 @@
+@import '@/styles/variables.module.scss';
+
 .view {
   display: flex;
   width: 100%;
   height: 100%;
-  border: 2px solid purple;
+  padding: $spacing-small;
+
+  // border: 2px solid purple;
 }
 
