--- a/src/components/admin/Header/styles.module.scss
+++ b/src/components/admin/Header/styles.module.scss
@@ -2,9 +2,11 @@
 
 .admin_header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 100%;
+  padding: 0 $spacing-small;
 
   border-bottom: 1px solid lightgray;
 }
