--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
   font-size: 14px;
 
@@ -12,13 +14,13 @@
   padding: 0;
   border: none;
   outline: none;
-  font-family: 'Lexend Deca', sans-serif;
+  // font-family: 'Lexend Deca', sans-serif;
   /* 100;200;300;400;500;600;700;800;900 */
-  /* font-family: 'Roboto', sans-serif; */
+   font-family: 'Roboto', sans-serif; 
   /* 100;300;400;500;700;900 */
   text-decoration: none;
   user-select: none;
-  transition: .2s;
+  // transition: .2s;
 }
 
 
