--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,4 @@
+@import '@/styles/variables.module.scss';
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
@@ -62,21 +63,23 @@ body {
   background-color: white;
 }
 
-// -------------------- RESPONSIVITY VARIABLES -------------------- //
- 
-$responsive-ultrawide: '1400px';
-$responsive-desktop: '1000px';
-$responsive-tablet: '760px';
-$responsive-mobile: '480px';
+.view__header {
+  display: flex;
+  justify-content: space-between;
+  height: $admin-view-header-height;
+  margin-bottom: $spacing-small;
 
-$admin-header-height: '40px';
-$admin-page-height: 'calc(40px)';
-$admin-menu-width: '200px';
-$admin-views-width: 'calc(200px)';
+  // border: 1px solid blue;
+}
 
-:export {
-  adminHeaderHeight: $admin-header-height;
-  adminPageHeight: $admin-page-height;
-  adminMenuWidth: $admin-menu-width;
-  adminViewsWidth: $admin-views-width;
+.view__header__search {
+  width: 100%;
+  max-width: 380px;
+}
+
+.view__content {
+  display: flex;
+  height: calc(100% - $admin-view-header-height - 10px);
+
+  // border: 1px solid blue;
 }
