--- a/src/components/admin/views/BaseView/styles.module.scss
+++ b/src/components/admin/views/BaseView/styles.module.scss
@@ -1,7 +1,21 @@
 @import '@/styles/variables.module.scss';
 
-.admin_view__base {
+.view_base {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.view_base__header {
+  display: flex;
+  justify-content: space-between;
+  height: $admin-view-header-height;
+  margin-bottom: $spacing-small;
+}
+
+.view_base__content {
+  display: flex;
+  width: 100%;
+  height: calc(100% - $admin-view-header-height - 10px);
 }
