--- a/src/styles/pages/admin/admin.module.scss
+++ b/src/styles/pages/admin/admin.module.scss
@@ -3,6 +3,8 @@
 .admin_page {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100vh;
   
   background-color: $color-background;
 }
@@ -10,10 +12,11 @@
 .admin_page__container {
   display: flex;
   width: 100%;
-  flex: 1;
+  height: 100%;
 }
 
 .admin_page__menu {
+  width: $admin-menu-width;
   padding-bottom: $spacing-small;
 
   background-color: $color-main;
@@ -23,7 +26,7 @@
 .admin_page__views_container {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  width: calc(100% - $admin-menu-width);
   height: 100%;
 }
 
@@ -36,7 +39,8 @@
 
 .admin_page__views_wrapper {
   display: flex;
-  flex: 1;
+  width: calc(100% - $spacing-large);
+  height: calc(100% - $admin-header-height - $spacing-large);
   border-radius: 6px;
   margin: $spacing-small;
 
