--- a/src/components/admin/views/SettingsView/styles.module.scss
+++ b/src/components/admin/views/SettingsView/styles.module.scss
@@ -2,4 +2,34 @@
 
 .admin_view__settings {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.admin_view__settings__header {
+  display: flex;
+  justify-content: space-between;
+  height: $admin-view-header-height;
+  margin-bottom: $spacing-small;
+
+  // border: 2px solid red;
+}
+
+.admin_view__settings__content {
+  display: flex;
+  width: 100%;
+  height: calc(100% - $admin-view-header-height - 10px);
+}
+
+.tabs_component {
+  height: 40px !important;
+  min-height: 40px !important;
+
+  & button {
+    height: 40px !important;
+    min-height: 40px !important;
+
+    font-size: 13px;
+  }
 }
