--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -16,3 +16,5 @@ $spacing-large: 20px;
 $color-main: #FFFFFF;
 $color-background: #F5F5F5;
 $color-white: #F0F0F0;
+
+$dark-font: rgba(0, 0, 0, 0.8);
