--- a/src/components/admin/views/SettingsView/styles.module.scss
+++ b/src/components/admin/views/SettingsView/styles.module.scss
@@ -12,8 +12,6 @@
   justify-content: space-between;
   height: $admin-view-header-height;
   margin-bottom: $spacing-small;
-
-  // border: 2px solid red;
 }
 
 .admin_view__settings__content {
@@ -33,3 +31,35 @@
     font-size: 13px;
   }
 }
+
+.admin_view__settings__panel {
+  width: 100%;
+  height: 100%;
+  padding: $spacing-small;
+}
+
+.admin_view__settings__panel_header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: $admin-view-header-height - $spacing-small;
+  margin-bottom: $spacing-medium;
+
+  span {
+    display: flex;
+    width: fit-content;
+    column-gap: 6px;
+
+    button {
+      width: fit-content;
+    }
+  }
+}
+
+.admin_view__settings__panel_content {
+  height: calc(100% - $admin-view-header-height - 5px);
+}
+
+// .admin_view__settings__modal__new_user {}
+
+// .admin_view__settings__modal__permissions {}
