Composição do modal de criação

--- a/src/components/admin/views/SettingsView/styles.module.scss
+++ b/src/components/admin/views/SettingsView/styles.module.scss
@@ -47,11 +47,11 @@
 
   span {
     display: flex;
-    width: fit-content;
-    column-gap: 6px;
+    // width: fit-content;
+    // column-gap: 6px;
 
     button {
-      width: fit-content;
+      // width: fit-content;
     }
   }
 }
