--- a/src/components/admin/views/SearchView/styles.module.scss
+++ b/src/components/admin/views/SearchView/styles.module.scss
@@ -2,4 +2,32 @@
 
 .admin_view__search {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.admin_view__search__header {
+  display: flex;
+  justify-content: space-between;
+  height: $admin-view-header-height;
+  margin-bottom: $spacing-small;
+}
+
+.admin_view__search__content {
+  display: flex;
+  width: 100%;
+  height: calc(100% - $admin-view-header-height - 10px);
+}
+
+.view_base_search__header__search {
+  width: 100%;
+  max-width: 380px;
+}
+
+.view_base_search__header__inputs {
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+  width: fit-content;
 }
