--- a/src/components/admin/tables/TableOI/styles.module.scss
+++ b/src/components/admin/tables/TableOI/styles.module.scss
@@ -1,14 +1,13 @@
 @import '@/styles/variables.module.scss';
 
-.table_listing {
+.table_listing_oi {
   // display: flex;
   width: 100%;
   height: 100%;
-}
+  overflow-x: scroll;
+  padding-bottom: 10px;
 
-.table_listing__wrapper {
-  width: 100% !important;
-  height: calc(100% - 116px);
-  overflow: hidden;
-  border: 1px solid red;
+  &::-webkit-scrollbar {
+    height: 8px;
+  }  
 }
