--- a/src/components/admin/views/ResumeView/styles.module.scss
+++ b/src/components/admin/views/ResumeView/styles.module.scss
@@ -2,4 +2,119 @@
 
 .admin_view__resume {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  // border: 1px solid red;
+}
+
+.admin_view__resume__archive {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 15px;
+  column-gap: 10px;
+
+  span {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    border-radius: 6px;
+    padding: 0 20px;
+    column-gap: 4px;
+
+    background-color: cornflowerblue;
+    
+    p {
+      font-size: 13px;
+      line-height: 13px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+
+      color: rgba(255, 255, 255, 0.8);
+    }
+
+    b {
+      font-size: 15px;
+      line-height: 15px;
+      letter-spacing: 0.5px;
+      font-weight: 400;
+
+      color: white;
+    }
+  }
+}
+
+.admin_view__resume__values {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  margin-bottom: 15px;
+  column-gap: 10px;
+
+  span {
+    display: flex;
+    flex: 1;
+    padding: 15px 20px;
+    border-radius: 6px;
+
+    border: 1px solid rgba(0, 0, 0, 0.2);
+
+    p {
+      display: flex;
+      align-items: center;
+      width: calc(100% - 120px);
+      font-size: 13px;
+      line-height: 16px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+
+      color: rgba(0, 0, 0, 0.6);
+    }
+
+    b {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      width: 120px;
+      font-size: 30px;
+      line-height: 30px;
+      font-weight: 800;
+
+      color: rgba(0, 0, 0, 0.65);
+    }
+  }
+}
+
+.admin_view__resume__charts {
+  display: flex;
+  width: 100%;
+  height: calc(100% - 150px);
+  column-gap: 10px;
+
+  .admin_view__resume__chart_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    padding: 40px 20px;
+    border-radius: 6px;
+
+    border: 1px solid rgba(0, 0, 0, 0.2);
+
+    .admin_view__resume__chart_label {
+      margin: 0 auto 30px 0;
+
+      font-size: 13px;
+      line-height: 16px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+
+      color: rgba(0, 0, 0, 0.6);
+    }
+  }
 }
