--- a/src/components/admin/views/MethodAnalysisView/styles.module.scss
+++ b/src/components/admin/views/MethodAnalysisView/styles.module.scss
@@ -2,16 +2,249 @@
 
 .admin_view__method_analysis {
   display: flex;
-  flex-direction: column;
   width: 100%;
-
-  border: 1px solid red;
+  column-gap: 20px;
 }
 
 .admin_view__method_analysis__chat_container {
-
+  display: flex;
+  flex: 1;
 }
 
 .admin_view__method_analysis__form_container {
+  display: flex;
+  flex: 1;
+}
+
+
+// ========================================================== CHATBOT
+
+.method_analysis__chat {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
   
+}
+
+.method_analysis__chat__header {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+
+  background-color: cornflowerblue;
+  color: white;
+
+  .chat__header__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+
+    svg {
+      font-size: 26px;
+    }
+  }
+
+  .chat__header__wrapper {
+    display: flex;
+    align-items: center;
+
+    font-size: 17px;
+    line-height: 17px;
+    font-weight: 600;
+  }
+}
+
+.method_analysis__chat__container {
+  display: flex;
+  width: 100%;
+  height: calc(100% - 110px);
+  border-radius: 5px;
+
+  background-color: rgba(0, 0, 0, 0.07);
+}
+
+.method_analysis__chat__messages_wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.method_analysis__chat__controls {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+
+  span {
+    display: flex;
+    column-gap: 5px;
+
+    button {
+      width: fit-content;
+    }
+  }
+}
+
+// .method_analysis__chat {
+  
+// }
+
+// .method_analysis__chat {
+  
+// }
+
+// ========================================================== FORM
+
+
+.method_analysis__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.method_analysis__form__header {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+
+  .form__header__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+
+    svg {
+      font-size: 26px;
+    }
+  }
+
+  .form__header__wrapper {
+    display: flex;
+    align-items: center;
+
+    font-size: 17px;
+    line-height: 17px;
+    font-weight: 600;
+  }
+}
+
+.method_analysis__form__container {
+  display: flex;
+  width: 100%;
+  height: calc(100% - 110px);
+  overflow: auto;
+  padding-right: 6px;
+}
+
+.method_analysis__form__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.form__inputs_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
+
+  border: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.form__inputs_container__label {
+  display: flex;
+  justify-content: center;
+  padding: 8px 0;
+  border-radius: 4px 4px 0 0;
+
+  font-size: 15px;
+  line-height: 15px;
+  font-weight: 500;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.form__inputs_container__wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 16px 10px;
+  row-gap: 20px;
+  
+  div {
+    position: relative;
+    display: flex;
+    width: 100%;
+    column-gap: 15px;
+
+    span {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      row-gap: 6px;      
+
+      b {
+        user-select: text;
+        font-size: 13px;
+        line-height: 13px;
+        font-weight: 500;
+      }
+
+      p {
+        user-select: text;
+        font-size: 14px;
+        line-height: 14px;
+        font-weight: 300;
+      }
+    }
+
+    &.textarea {
+      button {
+        position: absolute;
+        width: 30px;
+        min-width: 30px;
+        height: 30px;
+        bottom: 6px;
+        right: 6px;
+
+        svg {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+}
+
+.method_analysis__form__controls {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+
+  span {
+    display: flex;
+    column-gap: 5px;
+
+    button {
+      width: fit-content;
+    }
+  }
 }
